add the required memory capacity

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>.hide{display:none}audio{display:block}#in{border:1px dashed #aaa;padding:8px}#out{border:1px dashed #88f;padding:8px}</style>
 <h1>Sinsy emscripten</h1>
 <p>Sinsy で MusicXML ファイルから Wave ファイルを生成します。</p>
-<p>最新の Chrome / Firefox / Edge が必要です。</p>
+<p>最新の Chrome / Firefox / Edge と空きメモリ 1GB 以上が必要です。</p>
 <dl id="in">
   <dt>サンプルファイルで試す</dt>
   <dd><input id="sample" type="button" value="SAMPLE.xml で試す"></dd>
